Fix2: Resolve headers sent error and enhance error handling

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -31,8 +31,8 @@
 
 
       <div class="mb-3">
-        Origional Listing
-        <img src="<%= origionalImageurl %>" alt="">
+        Origional Listing <br>
+        <img src="<%= originalImageUrl %>" alt="">
       </div>
 
 
