--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -148,10 +148,32 @@
     <hr />
     <% } %>
 
+<br>
+<br>
+<p><b>All Reviews</b></p>
+<div class="row">
+  <% for (review of listing.reviews) { %>
+    <div class="card col-5 ms-3 mb-3">
+      <div class="card-body">
+        <h5 class="card-title"><%= review.author.username %></h5>
+        <p class="card-text"><%= review.comment %></p>
+        <p class="starability-result card-text" data-rating="<%=review.rating %>">
+        </p>
+        <form class="mb-3 " method="POST"  action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
+      </div>
+    </div>
+    <% } %>
+    <br>
+    <br>
+</div>
     
 
   </div>
-
+<br>
+<br>
+<br>
   <div class=" col-8 offset-3 mb-3">
    <h1><b><i>Map for Location</i></b></h1> 
    <div id="map"> </div>
