--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,12 +1,12 @@
 <style>
   .btn-search {
-    background-color: #fe424d;
+    background-color: #0ead69;
     color: #fff;
     border-radius: 25px;
     padding: 0 1rem 0 1rem;
   }
   .btn-search:hover{
-    background-color: #fe424d;
+    background-color: #0ead69;
     color: #fff;
   }
   .btn-search i {
